tests/NormalTests/paczka1/fuzzy1/14930436.err
Error in line 7: 9OK8HDu A~7~ 99,8
Error in line 11: A474 A480 48,9
Error in line 15: 6ou A474 87,6
Error in line 2: 9OK8HDu A474 42,3
Error in line 29: A474 A474 37,7
